[package]
name = "cache"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[[bin]]
name = "cache"
path = "src/main.rs"

[dependencies]
byteorder = "1.3.2"
postgres = "0.15.2"
quick-protobuf = "0.6.3"
rand = "0.6.5"
